--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
         <div class="container">
             <div class="top-header d-none d-sm-flex justify-content-between align-items-center">
                 <div class="contact">
-                    <a href="tel:+1234567890" class="tel"><i class="fa fa-phone" aria-hidden="true"></i>+1234567890</a>
+                    <a href="tel:+22899915677" class="tel"><i class="fa fa-phone" aria-hidden="true"></i>+22899915677</a>
                     <a href="mailto:info@yourmail.com"><i class="fa fa-envelope"
-                            aria-hidden="true"></i>info@yourmail.com</a>
+                            aria-hidden="true"></i>ezeckiellossavihlontor@gmail.com</a>
                 </div>
                 <nav class="d-flex aic">
-                    <a href="#" class="login"><i class="fa fa-user" aria-hidden="true"></i>Login</a>
+                    <a href="#" class="login disabled"><i class="fa fa-user" aria-hidden="true"></i>Login</a>
                     <ul class="nav social d-none d-md-flex">
-                        <li><a href="https://www.facebook.com/fh5co" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.facebook.com/btechinformatic/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
+                        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
                     </ul>
                 </nav>
             </div>
@@ -67,16 +68,16 @@
                 <a class="search-icon d-none d-md-block" href="#"><i class="fa fa-search"></i></a>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Accuiel</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">A propos</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Boutique</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Contactez-nous</a></li>
                     </ul>
-                    <form class="bg-white search-form" method="get" id="searchform">
+                    <form class="bg-white search-form disabled" method="get" id="searchform">
                         <div class="input-group">
-                            <input class="field form-control" id="s" name="s" type="text" placeholder="Search">
+                            <input class="field form-control " id="s" name="s" type="text" placeholder="Search">
                             <span class="input-group-btn">
                                 <input class="submit btn btn-primary" id="searchsubmit" name="submit" type="submit"
                                     value="Search">
@@ -97,30 +98,38 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
-                                    <h1 data-aos="fade-right" data-aos-delay="200">Creative<br> Multipurpose websites
+                                    <h1 data-aos="fade-right" data-aos-delay="200">Soyez les bienvenue<br>
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">Crafted by innovative creators for
-                                        Expecting
-                                        Peoples’s predefined dummy text<br> chunks as necessary, making this the first.
+                                    <p data-aos="fade-right" data-aos-delay="600">Bienvenue sur notre site ! Nous sommes ravis de vous accueillir et espérons que vous y trouverez toutes les informations que vous recherchez. Notre équipe est à votre disposition pour répondre à toutes vos questions et vous accompagner dans votre navigation. Nous vous souhaitons une excellente visite et espérons vous revoir très bientôt !
                                     </p>
-                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">See
-                                        More</a>
-                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Get
-                                        Now</a>
+                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">En savoir 
+                                        Plus</a>
+                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Envoyer un message  <i class="fa fa-whatsapp"></i></a>
                                 </div>
                             </div>
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
-                                    <h1 data-aos="fade-right" data-aos-delay="200">Creative<br> Multipurpose websites
+                                    <h1 data-aos="fade-right" data-aos-delay="200">Maintenance informatique<br> 
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">Crafted by innovative creators for
-                                        Expecting
-                                        Peoples’s predefined dummy text<br> chunks as necessary, making this the first.
+                                    <p data-aos="fade-right" data-aos-delay="600">Besoin de maintenir vos systèmes informatiques en parfait état de fonctionnement ? Faites confiance à notre équipe de techniciens qualifiés pour vous offrir des services de maintenance préventive et corrective de qualité supérieure. Contactez-nous dès maintenant pour en savoir plus sur nos solutions de maintenance informatique personnalisées.
                                     </p>
-                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">See
-                                        More</a>
-                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Get
-                                        Now</a>
+                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">En savoir 
+                                        Plus</a>
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Get
+                                        Now</a> -->
+                                </div>
+                            </div>
+                            <!--  -->
+                            <div class="swiper-slide slide-content d-flex align-items-center">
+                                <div class="single-slide">
+                                    <h1 data-aos="fade-right" data-aos-delay="200">Réseau informatique<br> 
+                                    </h1>
+                                    <p data-aos="fade-right" data-aos-delay="600">Vous cherchez à mettre en place un réseau informatique performant et sécurisé pour votre entreprise ? Contactez notre équipe d'experts en réseau informatique pour bénéficier de solutions personnalisées, d'une installation professionnelle et d'une maintenance de qualité supérieure. Faites confiance à notre expertise pour garantir une connectivité optimale et une protection contre les menaces potentielles.
+                                    </p>
+                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">En savoir 
+                                        Plus</a>
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Get
+                                        Now</a> -->
                                 </div>
                             </div>
                         </div>
@@ -141,11 +150,11 @@
         <div class="container">
             <div class="cta-content d-xl-flex align-items-center justify-content-around text-center text-xl-left">
                 <div class="content" data-aos="fade-right" data-aos-delay="200">
-                    <h2>FOR BUILDING THE MODERN WEBSITE</h2>
-                    <p>Packed with all the goodies you can get, Kallyas is our flagship premium template.</p>
+                    <h2>POUR CONSTRUIRE UN SITE WEB MODERNE ADAPTÉ A VOS <br> ACTIVITÉS ET VOS ÉVENEMENTS.</h2>
+                    <p>   Nous sommes disponibles 24h/7 pour vous satisfaire.</p>
                 </div>
                 <div class="subscribe-btn" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">
-                    <a href="#" class="btn btn-primary">Join Newsletter</a>
+                    <a href="https://wa.me/99915677"target="_blank" class="btn btn-primary">Inscrivez-vous </a>
                 </div>
             </div>
         </div>
@@ -155,17 +164,17 @@
     <section class="services">
         <div class="container">
             <div class="title text-center">
-                <h6>Our Speakers</h6>
-                <h1 class="title-blue">Why Choose Us</h1>
+                <h6 style="background-color: rgb(167, 183, 255);">Nos Multiples domaines d'intervention</h6>
+                <h1 class="title-blue">POURQUOI NOUS CHOISIR</h1>
             </div>
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-lg-4">
                         <div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
                             <img class="mr-4" src="assets/images/service1.png" alt="Web Development">
-                            <div class="media-body">
-                                <h5>Web Development</h5>
-                                Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
+                            <div class="media-body" style="box-shadow: 0 0 0 1rem skyblue; border-radius: 12px;">
+                                <h5 style="border-left: 0.5rem outset rgb(0, 255, 221);;">Développement web</h5>
+                                Nous vous offrons le meilleur sur le marché du digital. Ayez confiance!
                             </div>
                         </div>
                     </div>
