--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
-                                    <h1 data-aos="fade-right" data-aos-delay="200">Soyez les bienvenue<br>
+                                    <h1 data-aos="fade-right" data-aos-delay="200">Soyez les bienvenue sur notre site<br>
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">Bienvenue sur notre site ! Nous sommes ravis de vous accueillir et espérons que vous y trouverez toutes les informations que vous recherchez. Notre équipe est à votre disposition pour répondre à toutes vos questions et vous accompagner dans votre navigation. Nous vous souhaitons une excellente visite et espérons vous revoir très bientôt !
+                                    <p data-aos="fade-right" data-aos-delay="600">Nous sommes ravis de vous accueillir et espérons que vous y trouverez toutes les informations que vous recherchez. Nous vous souhaitons une excellente visite et espérons vous revoir très bientôt !
                                     </p>
                                     <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">En savoir 
                                         Plus</a>
@@ -154,7 +154,7 @@
                     <p>   Nous sommes disponibles 24h/7 pour vous satisfaire.</p>
                 </div>
                 <div class="subscribe-btn" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">
-                    <a href="https://wa.me/99915677"target="_blank" class="btn btn-primary">Inscrivez-vous </a>
+                    <a href="https://wa.me/+22899915677"target="_blank" class="btn btn-primary">Inscrivez-nous </a>
                 </div>
             </div>
         </div>
@@ -164,7 +164,7 @@
     <section class="services">
         <div class="container">
             <div class="title text-center">
-                <h6 style="background-color: rgb(167, 183, 255);">Nos Multiples domaines d'intervention</h6>
+                <h6 style="background-color: rgb(0, 247, 255);">Nos Multiples domaines d'intervention</h6>
                 <h1 class="title-blue">POURQUOI NOUS CHOISIR</h1>
             </div>
             <div class="container">
