--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="#">Accuiel</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">A propos</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Boutique</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">A propos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Formation</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Contactez-nous</a></li>
                     </ul>
                     <form class="bg-white search-form disabled" method="get" id="searchform">
@@ -100,7 +100,9 @@
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Soyez les bienvenue sur notre site<br>
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">Nous sommes ravis de vous accueillir et espérons que vous y trouverez toutes les informations que vous recherchez. Nous vous souhaitons une excellente visite et espérons vous revoir très bientôt !
+                                    <p data-aos="fade-right" data-aos-delay="600">Nous sommes ravis de vous accueillir 
+                                        et espérons que vous y trouverez toutes les informations que vous recherchez. 
+                                        Nous vous souhaitons une excellente visite et espérons vous revoir très bientôt !
                                     </p>
                                     <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">En savoir 
                                         Plus</a>
@@ -111,7 +113,11 @@
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Maintenance informatique<br> 
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">Besoin de maintenir vos systèmes informatiques en parfait état de fonctionnement ? Faites confiance à notre équipe de techniciens qualifiés pour vous offrir des services de maintenance préventive et corrective de qualité supérieure. Contactez-nous dès maintenant pour en savoir plus sur nos solutions de maintenance informatique personnalisées.
+                                    <p data-aos="fade-right" data-aos-delay="600">Besoin de maintenir vos systèmes
+                                         informatiques en parfait état de fonctionnement ? Faites confiance à notre 
+                                         équipe de techniciens qualifiés pour vous offrir des services de maintenance 
+                                         préventive et corrective de qualité supérieure. Contactez-nous dès maintenant 
+                                         pour en savoir plus sur nos solutions de maintenance informatique personnalisées.
                                     </p>
                                     <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">En savoir 
                                         Plus</a>
@@ -124,7 +130,12 @@
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Réseau informatique<br> 
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">Vous cherchez à mettre en place un réseau informatique performant et sécurisé pour votre entreprise ? Contactez notre équipe d'experts en réseau informatique pour bénéficier de solutions personnalisées, d'une installation professionnelle et d'une maintenance de qualité supérieure. Faites confiance à notre expertise pour garantir une connectivité optimale et une protection contre les menaces potentielles.
+                                    <p data-aos="fade-right" data-aos-delay="600">Vous cherchez à mettre en place un réseau 
+                                        informatique performant et sécurisé pour votre entreprise ? Contactez notre équipe 
+                                        d'experts en réseau informatique pour bénéficier de solutions personnalisées, d'une 
+                                        installation professionnelle et d'une maintenance de qualité supérieure. Faites confiance 
+                                        à notre expertise pour garantir une connectivité optimale et une protection contre les
+                                         menaces potentielles.
                                     </p>
                                     <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">En savoir 
                                         Plus</a>
@@ -151,10 +162,10 @@
             <div class="cta-content d-xl-flex align-items-center justify-content-around text-center text-xl-left">
                 <div class="content" data-aos="fade-right" data-aos-delay="200">
                     <h2>POUR CONSTRUIRE UN SITE WEB MODERNE ADAPTÉ A VOS <br> ACTIVITÉS ET VOS ÉVENEMENTS.</h2>
-                    <p>   Nous sommes disponibles 24h/7 pour vous satisfaire.</p>
+                    <p>Nous sommes disponibles 24h/7 pour vous satisfaire.</p>
                 </div>
                 <div class="subscribe-btn" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">
-                    <a href="https://wa.me/+22899915677"target="_blank" class="btn btn-primary">Inscrivez-nous </a>
+                    <a href="https://wa.me/+22899915677"target="_blank" class="btn btn-primary">Inscrivez-nous en un clic ! </a>
                 </div>
             </div>
         </div>
@@ -165,15 +176,15 @@
         <div class="container">
             <div class="title text-center">
                 <h6 style="background-color: rgb(0, 247, 255);">Nos Multiples domaines d'intervention</h6>
-                <h1 class="title-blue">POURQUOI NOUS CHOISIR</h1>
+                <h1 class="title-blue">POURQUOI NOUS CHOISIR ?</h1>
             </div>
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-lg-4">
                         <div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
                             <img class="mr-4" src="assets/images/service1.png" alt="Web Development">
-                            <div class="media-body" style="box-shadow: 0 0 0 1rem skyblue; border-radius: 12px;">
-                                <h5 style="border-left: 0.5rem outset rgb(0, 255, 221);;">Développement web</h5>
+                            <div class="media-body" >
+                                <h5 style="border-left: 10px outset rgb(44, 206, 255);">Développement web</h5>
                                 Nous vous offrons le meilleur sur le marché du digital. Ayez confiance!
                             </div>
                         </div>
@@ -181,9 +192,9 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="media" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
                             <img class="mr-4" src="assets/images/service2.png" alt="Web Development">
-                            <div class="media-body">
-                                <h5>Testing for perfection</h5>
-                                Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
+                            <div class="media-body" >
+                                <h5 style="border-left: 10px outset rgb(44, 206, 255);">Maintenance Informatique</h5>
+                                Les services de maintenance proposés sont éffaces et moins cher ! On vous remet sur pied vos Ordinateurs Portatif et UC.
                             </div>
                         </div>
                     </div>
@@ -191,8 +202,8 @@
                         <div class="media" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
                             <img class="mr-4" src="assets/images/service3.png" alt="Web Development">
                             <div class="media-body">
-                                <h5>Discussion of the idea</h5>
-                                Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
+                                <h5 style="border-left: 10px outset rgb(44, 206, 255);">Réseau Informatique</h5>
+                                L'objetif est de mettre en place un system réseau évolutif et adapté à vos activités au sein de vos structure.
                             </div>
                         </div>
                     </div>
@@ -200,8 +211,8 @@
                         <div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
                             <img class="mr-4" src="assets/images/service4.png" alt="Web Development">
                             <div class="media-body">
-                                <h5>Modern style</h5>
-                                Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
+                                <h5 style="border-left: 10px outset rgb(44, 206, 255);">Gaming Room</h5>
+                                Vous ete un fan des jeux vidéo? Bienvenue,  <a href="#" type="button" class="but">Allez ici</a> pour découvrir nos articles de jeux vidéo.
                             </div>
                         </div>
                     </div>
@@ -209,8 +220,8 @@
                         <div class="media" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
                             <img class="mr-4" src="assets/images/service1.png" alt="Web Development">
                             <div class="media-body">
-                                <h5>Web Development</h5>
-                                Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
+                                <h5 style="border-left: 10px outset rgb(44, 206, 255);">Infographie / Web Design</h5>
+                                Nous gerons votre image, conception et réalisation d'affiche publicitaire; Bache,Badge,Flyers, Aganda, Calendrier.
                             </div>
                         </div>
                     </div>
@@ -218,8 +229,9 @@
                         <div class="media" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
                             <img class="mr-4" src="assets/images/service5.png" alt="Web Development">
                             <div class="media-body">
-                                <h5>Elaboration of the core</h5>
-                                Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
+                                <h5 style="border-left: 10px outset rgb(44, 206, 255);">Electronique</h5>
+                                Flash, décodage, bypass Android. Bout de Charge telephone, Montage tactil et divers services. Pour Reparation
+                                <a href="" type="button" class="but">Cliquez ici</a>
                             </div>
                         </div>
                     </div>
@@ -234,7 +246,7 @@
             <div class="row">
                 <div class="col-md-6" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
                     <div class="title">
-                        <h6 class="title-primary">about Tamplate</h6>
+                        <h6 class="title-primary">Presentation</h6>
                         <h1 class="title-blue">a rich featured, epic & premium work.</h1>
                     </div>
                     <p>There are many variations of passages of available but the majority have suffered alteration in
