--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="#">Accuiel</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Boutique</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">A propos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Formation</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contactez-nous</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Pages/service.html">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Pages/boutique.html">Boutique</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Pages/propos.html">A propos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Pages/formation.html">Formation</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Pages/contact.html">Contactez-nous</a></li>
                     </ul>
                     <form class="bg-white search-form disabled" method="get" id="searchform">
                         <div class="input-group">
