--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
   <!-- Floating logo whatsapp -->
   <a href="https://wa.me/90146415" target="_blank">
 
-
+    <!-- <video loop="" muted="" autoplay="" playsinline="" poster="https://cdn.cloudflare.steamstatic.com/steam/clusters/frontpage/53d62cce754388a033e141be/page_bg_mobile_french.jpg?t=1677616037" class="fullscreen-bg__video_mobile" data-dm-button-id="download-master-button-172869831">
+        <source src="https://cdn.cloudflare.steamstatic.com/steam/clusters/frontpage/53d62cce754388a033e141be/webm_page_bg_mobile_french.webm?t=1677616037" type="video/webm">
+                                    <source src="https://cdn.cloudflare.steamstatic.com/steam/clusters/frontpage/53d62cce754388a033e141be/mp4_page_bg_mobile_french.mp4?t=1677616037" type="video/mp4">
+                            </video> -->
     <div>
         <div title="Ecrivez nous via Whatsapp"
             class="ht-ctc ht-ctc-chat ctc-analytics ctc_wp_desktop style-2 ht_ctc_animation no-animations"
@@ -89,12 +92,12 @@
                             aria-hidden="true"></i>ezeckiellossavihlontor@gmail.com</a>
                 </div>
                 <nav class="d-flex aic">
-                    <a href="#" class="login disabled"><i class="fa fa-user" aria-hidden="true"></i>Login</a>
+                    <!-- <a href="#" class="login disabled"><i class="fa fa-user" aria-hidden="true"></i>Login</a> -->
                     <ul class="nav social d-none d-md-flex">
                         <li><a href="https://www.facebook.com/btechinformatic/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
-                        <li><a href="#"><i class="fa fa-telegram"></i></a></li>
+                        <li><a href="https://wa.me/90146415"><i class="fa fa-whatsapp"></i></a></li>
+                        <li><a href="https://t.me/+nbiHZBEU3vxiYTlk"><i class="fa fa-telegram"></i></a></li>
                     </ul>
                 </nav>
             </div>
@@ -337,7 +340,7 @@
                         <span>MENSUEL</span>
                         <h2>Starter</h2>
                         <p class="desc">Here goes some description</p>
-                        <p class="price">$39.00</p>
+                        <p class="price">15.000</p>
                         <p>Create excepteur sint occaecat cupidatat non proident</p>
                         <a href="#" class="btn btn-primary">Buy Now</a>
                         <svg viewBox="0 0 170 193">
@@ -349,15 +352,16 @@
                 <div class="col-md-4">
                     <div class="single-pricing text-center" data-aos="fade-up" data-aos-delay="300"
                         data-aos-duration="600">
-                        <span>MENSUEL</span>
-                        <h2>Starter</h2>
-                        <p class="desc">Here goes some description</p>
-                        <p class="price">$39.00</p>
-                        <p>5GB Storage Space</p>
-                        <p>20GB MENSUEL Bandwidth</p>
-                        <p>My SQL Databases</p>
-                        <p>100 Email Account</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
+                        <span>1MOIS / 3MOIS</span>
+                        <h2>INFORMATIQUE BUREAUTIQUE</h2>
+                        <p class="desc"></p>
+                        
+                        <p><b style="color: red;">*</b> Introduction à la bureautique</p>
+                        <p><b style="color: red;">*</b> Pack Microsoft Office</p>
+                        <p><b style="color: red;">*</b> Applications spécialisées dans vos domaines d'activités</p>
+                        <p><b style="color: red;">*</b> Google Suite (Les Services Google)</p>
+                        <p class="price">25.000 F cfa</p>
+                        <a href="#" class="btn btn-primary">S'inscrire</a>
                         <svg viewBox="0 0 170 193">
                             <path fill-rule="evenodd" fill="rgb(238, 21, 21)"
                                 d="M39.000,31.999 C39.000,31.999 -21.000,86.500 9.000,121.999 C39.000,157.500 91.000,128.500 104.000,160.999 C117.000,193.500 141.000,201.000 150.000,183.000 C159.000,165.000 172.000,99.000 167.000,87.000 C162.000,75.000 170.000,63.000 152.000,45.000 C134.000,27.000 128.000,15.999 116.000,11.000 C104.000,6.000 89.000,-0.001 89.000,-0.001 L39.000,31.999 Z" />
