--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i%7CRajdhani:400,600,700"
         rel="stylesheet">
+         <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+  crossorigin="anonymous">
+  
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap"> -->
     <!-- Plugins Stylesheets -->
     <link rel="stylesheet" href="assets/css/loader/loaders.css">
     <link rel="stylesheet" href="assets/css/font-awesome/font-awesome.css">
@@ -97,7 +103,7 @@
                         <li><a href="https://www.facebook.com/btechinformatic/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://wa.me/90146415"><i class="fa fa-whatsapp"></i></a></li>
-                        <li><a href="https://t.me/+nbiHZBEU3vxiYTlk"><i class="fa fa-telegram"></i></a></li>
+                        <li><a href="https://t.me/+nbiHZBEU3vxiYTlk" target="_blank"><i class="fa fa-telegram"></i></a></li>
                     </ul>
                 </nav>
             </div>
@@ -208,7 +214,7 @@
             <div class="cta-content d-xl-flex align-items-center justify-content-around text-center text-xl-left">
                 <div class="content" data-aos="fade-right" data-aos-delay="200">
                     <h2>POUR CONSTRUIRE UN SITE WEB MODERNE ADAPTÉ A VOS <br> ACTIVITÉS ET VOS ÉVENEMENTS.</h2>
-                    <p>Nous sommes disponibles 24h/7 pour vous satisfaire.</p>
+                    <p>    Nous sommes disponibles 24h/7 pour vous satisfaire.</p>
                 </div>
                 <div class="subscribe-btn" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">
                     <a href="https://wa.me/+22899915677"target="_blank" class="btn btn-primary">Incrivez-nous en un clic ! </a>
@@ -266,6 +272,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-lg-4">
                         <div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
+                            <i></i>
                             <img class="mr-4" src="assets/images/service1.png" alt="Web Development">
                             <div class="media-body" >
                                 <h5 style="border-left: 10px outset rgb(44, 206, 255);">Développement web</h5>
@@ -302,7 +309,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-4">
                         <div class="media" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
-                            <img class="mr-4" src="assets/images/service1.png" alt="Web Development">
+                            <img class="mr-4" src="assets/images/service5.png" alt="Web Development">
                             <div class="media-body">
                                 <h5 style="border-left: 10px outset rgb(44, 206, 255);">Infographie / Web Design</h5>
                                 Nous gerons votre image, conception et réalisation d'affiche publicitaire; Bache,Badge,Flyers, Aganda, Calendrier.
@@ -311,7 +318,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-4">
                         <div class="media" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
-                            <img class="mr-4" src="assets/images/service5.png" alt="Web Development">
+                            <img class="mr-4" src="assets/images/service6.png" alt="Web Development">
                             <div class="media-body">
                                 <h5 style="border-left: 10px outset rgb(44, 206, 255);">Electronique</h5>
                                 Flash, décodage, bypass Android. Bout de Charge telephone, Montage tactil et divers services. Pour Reparation
@@ -337,12 +344,15 @@
                 <div class="col-md-4">
                     <div class="single-pricing text-center" data-aos="fade-up" data-aos-delay="0"
                         data-aos-duration="600">
-                        <span>MENSUEL</span>
-                        <h2>Starter</h2>
-                        <p class="desc">Here goes some description</p>
-                        <p class="price">15.000</p>
-                        <p>Create excepteur sint occaecat cupidatat non proident</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
+                        <span>Formation</span>
+                        <h2>Développement D'application</h2>
+                        <p class="desc"></p>
+                        <p><b style="color: red;">*</b> <i>Module 1</i>.</p>
+                        <p><b style="color: red;">*</b> <i>Module 2</i>.</p>
+                        <p><b style="color: red;">*</b> <i>Module 3</i> .</p>
+                        <p><b style="color: red;">*</b> <i>Module 4</i>.</p>
+                        <!-- <p class="price">25.000 F cfa</p> -->
+                        <a href="#" class="btn btn-primary">Détails et inscription</a>
                         <svg viewBox="0 0 170 193">
                             <path fill-rule="evenodd" fill="rgb(238, 21, 21)"
                                 d="M39.000,31.999 C39.000,31.999 -21.000,86.500 9.000,121.999 C39.000,157.500 91.000,128.500 104.000,160.999 C117.000,193.500 141.000,201.000 150.000,183.000 C159.000,165.000 172.000,99.000 167.000,87.000 C162.000,75.000 170.000,63.000 152.000,45.000 C134.000,27.000 128.000,15.999 116.000,11.000 C104.000,6.000 89.000,-0.001 89.000,-0.001 L39.000,31.999 Z" />
@@ -352,16 +362,16 @@
                 <div class="col-md-4">
                     <div class="single-pricing text-center" data-aos="fade-up" data-aos-delay="300"
                         data-aos-duration="600">
-                        <span>1MOIS / 3MOIS</span>
+                        <span>Formation</span>
                         <h2>INFORMATIQUE BUREAUTIQUE</h2>
                         <p class="desc"></p>
                         
-                        <p><b style="color: red;">*</b> Introduction à la bureautique</p>
-                        <p><b style="color: red;">*</b> Pack Microsoft Office</p>
-                        <p><b style="color: red;">*</b> Applications spécialisées dans vos domaines d'activités</p>
-                        <p><b style="color: red;">*</b> Google Suite (Les Services Google)</p>
-                        <p class="price">25.000 F cfa</p>
-                        <a href="#" class="btn btn-primary">S'inscrire</a>
+                        <p><b style="color: red;">*</b> <i>Module 1</i>Introduction à la bureautique</p>
+                        <p><b style="color: red;">*</b> <i>Module 2</i>Pack Microsoft Office</p>
+                        <p><b style="color: red;">*</b> <i>Module 3</i> Applications spécialisées dans vos domaines d'activités</p>
+                        <p><b style="color: red;">*</b> <i>Module 4</i>Google Suite (Les Services Google)</p>
+                        <!-- <p class="price">25.000 F cfa</p> -->
+                        <a href="#" class="btn btn-primary">Détails et inscription</a>
                         <svg viewBox="0 0 170 193">
                             <path fill-rule="evenodd" fill="rgb(238, 21, 21)"
                                 d="M39.000,31.999 C39.000,31.999 -21.000,86.500 9.000,121.999 C39.000,157.500 91.000,128.500 104.000,160.999 C117.000,193.500 141.000,201.000 150.000,183.000 C159.000,165.000 172.000,99.000 167.000,87.000 C162.000,75.000 170.000,63.000 152.000,45.000 C134.000,27.000 128.000,15.999 116.000,11.000 C104.000,6.000 89.000,-0.001 89.000,-0.001 L39.000,31.999 Z" />
@@ -371,12 +381,15 @@
                 <div class="col-md-4">
                     <div class="single-pricing text-center" data-aos="fade-up" data-aos-delay="600"
                         data-aos-duration="600">
-                        <span>MENSUEL</span>
-                        <h2>Starter</h2>
-                        <p class="desc">Here goes some description</p>
-                        <p class="price">$39.00</p>
-                        <p>Create excepteur sint occaecat cupidatat non proident</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
+                        <span>Formation</span>
+                        <h2>Formation en multimédia</h2>
+                        <p class="desc"></p>
+                        <p><b style="color: red;">*</b> <i>Module 1:</i> Introduction au multimédia</p>
+                        <p><b style="color: red;">*</b> <i>Module 2</i> Graphisme et design</p>
+                        <p><b style="color: red;">*</b> <i>Module 3 </i> Montage vidéo et animation</p>
+                        <p><b style="color: red;">*</b> <i>  Module 4</i> Conception de sites web</p>
+                        <!-- <p class="price">25.000 F cfa</p> -->
+                        <a href="#" class="btn btn-primary">Détails et inscription</a>
                         <svg viewBox="0 0 170 193">
                             <path fill-rule="evenodd" fill="rgb(238, 21, 21)"
                                 d="M39.000,31.999 C39.000,31.999 -21.000,86.500 9.000,121.999 C39.000,157.500 91.000,128.500 104.000,160.999 C117.000,193.500 141.000,201.000 150.000,183.000 C159.000,165.000 172.000,99.000 167.000,87.000 C162.000,75.000 170.000,63.000 152.000,45.000 C134.000,27.000 128.000,15.999 116.000,11.000 C104.000,6.000 89.000,-0.001 89.000,-0.001 L39.000,31.999 Z" />
