--- a/index.html
+++ b/index.html
@@ -366,10 +366,10 @@
                         <h2>INFORMATIQUE BUREAUTIQUE</h2>
                         <p class="desc"></p>
                         
-                        <p><b style="color: red;">*</b> <i>Module 1</i>Introduction à la bureautique</p>
-                        <p><b style="color: red;">*</b> <i>Module 2</i>Pack Microsoft Office</p>
-                        <p><b style="color: red;">*</b> <i>Module 3</i> Applications spécialisées dans vos domaines d'activités</p>
-                        <p><b style="color: red;">*</b> <i>Module 4</i>Google Suite (Les Services Google)</p>
+                        <p><b style="color: red;">*</b> <i>Module 1:</i> Introduction à la bureautique</p>
+                        <p><b style="color: red;">*</b> <i>Module 2:</i> Pack Microsoft Office</p>
+                        <p><b style="color: red;">*</b> <i>Module 3:</i> Applications spécialisées dans vos domaines d'activités</p>
+                        <p><b style="color: red;">*</b> <i>Module 4:</i> Google Suite (Les Services Google)</p>
                         <!-- <p class="price">25.000 F cfa</p> -->
                         <a href="#" class="btn btn-primary">Détails et inscription</a>
                         <svg viewBox="0 0 170 193">
@@ -385,9 +385,9 @@
                         <h2>Formation en multimédia</h2>
                         <p class="desc"></p>
                         <p><b style="color: red;">*</b> <i>Module 1:</i> Introduction au multimédia</p>
-                        <p><b style="color: red;">*</b> <i>Module 2</i> Graphisme et design</p>
-                        <p><b style="color: red;">*</b> <i>Module 3 </i> Montage vidéo et animation</p>
-                        <p><b style="color: red;">*</b> <i>  Module 4</i> Conception de sites web</p>
+                        <p><b style="color: red;">*</b> <i>Module 2:</i> Graphisme et design</p>
+                        <p><b style="color: red;">*</b> <i>Module 3:</i> Montage vidéo et animation</p>
+                        <p><b style="color: red;">*</b> <i>  Module 4:</i> Conception de sites web</p>
                         <!-- <p class="price">25.000 F cfa</p> -->
                         <a href="#" class="btn btn-primary">Détails et inscription</a>
                         <svg viewBox="0 0 170 193">
