--- a/index.html
+++ b/index.html
@@ -2,13 +2,7 @@
 <html lang="en">
 
 <head>
-    <!--
-    /   Multipurpose: Free Template by FreeHTML5.co
-    /   Author: https://freehtml5.co
-    /   Facebook: https://facebook.com/fh5co
-    /   Twitter: https://twitter.com/fh5co
-    -->
-    <meta charset="UTF-8">
+        <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Document title -->
@@ -470,7 +464,7 @@
                 </div>
             </div>
             <div class="text-center">
-                <a href="boutique.html" class="btn btn-primary">Cliquez ici pour voir plus de produits</a>
+                <a href="/Pages/boutique.html" class="btn btn-primary">Cliquez ici pour voir plus de produits</a>
             </div>
         </div>
     </section>
