--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
 <body>
     <!-- Loader Start -->
-    <div class="css-loader">
+    <!-- <div class="css-loader">
         <div class="loader-inner line-scale d-flex align-items-center justify-content-center"></div>
-    </div>
+    </div> -->
     <!-- Loader End -->
     <!-- Header Start -->
     <header class="position-absolute w-100">
@@ -115,11 +115,11 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="#">Accuiel</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Pages/service.html">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Pages/boutique.html">Boutique</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Pages/propos.html">A propos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Pages/formation.html">Formation</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Pages/contact.html">Contactez-nous</a></li>
+                        <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="boutique.html">Boutique</a></li>
+                        <li class="nav-item"><a class="nav-link" href="propos.html">A propos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="formation.html">Formation</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contactez-nous</a></li>
                     </ul>
                     <form class="bg-white search-form disabled" method="get" id="searchform">
                         <div class="input-group">
